# durl

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
scripts/: install.sh
src/: main.rs
